# perplex-workbench

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  IMPROVEMENTS_V1.1.md  LICENSE  README.md  V1.1_RELEASE_SUMMARY.md  composition.md  docker-compose.yml  export_planetprofile.py  make_compositions.py  planetprofile_tables.py  plot_comparisons.py  pyproject.toml  requirements.txt  run_full_pipeline.py  run_perplex.py  validate_tab.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  tests.yml
build_inputs/: lunar_hp633_template.build.in  lunar_stx21_template.build.in  moon_far_dry_mantle.build.in  moon_near_pkt_mantle.build.in
compositions/: moon_far_dry_mantle.json  moon_far_dry_mantle_bulk_values.txt  moon_far_dry_mantle_summary.txt  moon_far_highlands_surface_proxy.json  moon_far_highlands_surface_proxy_bulk_values.txt  moon_far_highlands_surface_proxy_summary.txt  moon_near_maria_surface_proxy.json  moon_near_maria_surface_proxy_bulk_values.txt  moon_near_maria_surface_proxy_summary.txt  moon_near_pkt_mantle.json  moon_near_pkt_mantle_bulk_values.txt  moon_near_pkt_mantle_summary.txt
configs/: models.example.json
outputs/: README.md
outputs/examples/moon_far_highlands_surface_proxy/: oxide_omissions.txt
outputs/examples/moon_near_maria_surface_proxy/: oxide_omissions.txt
perplex_workbench/cli/: __init__.py  common.py  gui.py  run_perplex.py
perplex_workbench/core/: config.py  constants.py  database_utils.py  exceptions.py  logging_config.py  logging_integration.py  model_schema.py
perplex_workbench/gui/: database_selector.py  import_export.py  phase_diagram.py  streamlit_app.py  validation_enhanced.py
tests/: test_core_helpers.py  test_lunar_pipeline.py
